# networking-vhost-vfio

./: .gitignore  .gitreview  .stestr.conf  README.md  README.rst  groups  project.config  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
devstack/libs/: blacklist.sh  vhost-vfio
devstack/ovs-vhost/: net-ovs-init  ovs-alloc-vfs-init  ovs-net-vhost-vfio-init
devstack/vhost-vfio/: alloc-vfs-init
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst  local.conf.sample
doc/source/install/: common_configure.rst  get_started.rst  index.rst  install.rst
doc/source/reference/: index.rst
doc/source/tests/: func_tests_setup_centos.rst  func_tests_setup_ubuntu.rst  index.rst  sample_mdev_setup.rst
doc/source/user/: index.rst
networking_vhost_vfio/client/: port.py
networking_vhost_vfio/mdev/: __init__.py  mdev.py  privsep.py
networking_vhost_vfio/neutron/plugins/: vhost_vfio_ext.py
networking_vhost_vfio/neutron/service/: api_def.py  plugin.py  plugin_base.py
networking_vhost_vfio/os_vif/: exception.py
networking_vhost_vfio/os_vif/internal/: __init__.py
networking_vhost_vfio/os_vif/vif_plug_ovs/: exception.py  linux_net.py  ovs.py  privsep.py
networking_vhost_vfio/tests/: base.py  test_test.py
networking_vhost_vfio/tests/functional/: test_mdev_with_mtty.py
networking_vhost_vfio/tests/unit/: test_test.py
releasenotes/source/: conf.py  index.rst
tools/: tox_install.sh
(+10 files in other folders)
