[metadata]
name = networking-vhost-vfio
summary = N/A
description-file =
    README.rst
author = Intel Corporation
author-email = N/A
home-page = https://github.com/intel-orchestration-software/networking-vhost-vfio
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[files]
packages =
    networking_vhost_vfio

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html


[entry_points]
neutron.ml2.mechanism_drivers =
    virtio-direct = networking_vhost_vfio.neutron.ml2.driver.mech_ovs_vhost_vfio:OVSVirtioDirectMechanismDriver
os_vif =
    virtio-direct = networking_vhost_vfio.os_vif.vif_plug_ovs.ovs:VirtioDirectPlugin
